--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <span>
 
             <h2 id="heading2">
-                <strong>Main Bazar Panel Chart</h2></strong>
+                <strong>Day Mumbai Bazar Panel Chart</h2></strong>
                 </span>
     </span>
     <span>
-        <p id="p1">main bazar panel chart, main bazar night panel chart, main bazar panel patti jodi chart, night main bazar panel chart, night main bazar panel panel chart,<br> satta matka main bazar panel, main bazar panel satta matka chart, main bazar panel chart matka, main bazar chart panel, main bazarf guessing panel chart
+        <p id="p1">Day mumbai bazar panel chart, Day mumbai bazar panel chart, Day mumbai bazar panel patti jodi chart, Day Mumbai bazar penal panel chart, Day mumbai bazar 2023-2024 panel chart, satta matka Day mumbai bazar penal, Day mumbai bazar panel satta matka chart, Day mumbai bazar panel chart matka, Daymumbaibazar chart panel, Day mumbai bazar guessing penal chart
         </p>
     </span>
     </div>
