--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <a href="https://sattaamatka.co.com/main-bazar-panel-chart.php"></a>
         <h1>
             <strong>DAY MUMBAI BAZAR PANEL CHART</strong>
+            <span>12.05 PM to 3.05 PM</span>
         </h1>
         </div>
     </header>
