--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <a href="https://sattaamatka.co.com/main-bazar-panel-chart.php"></a>
         <h1>
             <strong>DAY MUMBAI BAZAR PANEL CHART</strong>
-            <span> &nbsp; &nbsp; 12.05 PM to 3.05 PM</span>
+            <span> &nbsp; &nbsp;Play Time - 12.05 PM to 3.05 PM</span>
         </h1>
         </div>
     </header>
