--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <a href="https://sattaamatka.co.com/main-bazar-panel-chart.php"></a>
         <h1>
             <strong>DAY MUMBAI BAZAR PANEL CHART</strong>
-            <span> &nbsp; &nbsp;12.05 PM to 3.05 PM</span>
+            <span> &nbsp; &nbsp;12.05 PM to 2.05 PM</span>
         </h1>
         </div>
     </header>
@@ -30,6 +30,7 @@
     </div>
     <div class="container3" id="c3">
         <div id="h3" >DAY MUMBAI BAZAR</div>
+        <div> 12.05 &nbsp; &nbsp; 2.05</div>
         <div id="pno">237-24-699</div>
         <button type="button" id="bn1" class="btn btn-primary" onclick="refreshResult()">Refresh Results</button>
     </div>
