--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container3" id="c3">
         <div id="h3" >DAY MUMBAI BAZAR</div>
-        <div> 12.05 &nbsp; &nbsp; 2.05</div>
+        <div id="time"> 12.05 &nbsp; &nbsp; 2.05</div>
         <div id="pno">237-24-699</div>
         <button type="button" id="bn1" class="btn btn-primary" onclick="refreshResult()">Refresh Results</button>
     </div>
