--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-kiki<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1492,9 +1492,9 @@ kiki<!DOCTYPE html>
                         <br>
                         20/01/24
                     </th
-                        </th>     
+                    <th>     
                         1
-                        <br></th>
+                        <br>
                         5
                         <br>
                         7
