--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,7 @@
                         <br>
                         9
                     </th>
-                    <td>33</td>
+                    <td style="color: #ff0000;">33</td>
                     <th>
                         1    
                         <br>
